--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,15 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.reactivex/rxjava -->
+        <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
